# same-cli

./: .gitignore  .golintci.yml  .pre-commit-config.yaml  Boneyard.md  CODEOWNERS  ClusterCTLReadme.md  DEMO.md  Makefile  README.md  create_env_file.py  go.mod  go.sum  main  main.go  pyproject.toml  same-cli  same.yaml  set_env_vars_sample.sh
.github/ISSUE_TEMPLATE/: sample-porting-request.md
.github/scripts/: get_release_version.py  setup_dlv_debug_as_root.sh  setup_environment_for_ci.sh
.github/workflows/: build.yaml  go.yml  push_to_blob.yaml  release.yaml  same.yaml
cmd/: AUTHORS.go  config.go  connect_to_aks.go  connect_to_nodepool.go  create.go  create_or_delete_storage_class.go  delete.go  deploy_or_update_a_pipeline.go  deploy_or_update_kubeflow.go  full.go  init.go  installDocker.go  install_docker.go  install_k3s.go  load_config.go  main.go  program.go  program_compile.go  program_create.go  program_delete.go  program_init.go  program_list.go  program_run.go  program_utils.go  root.go  root_config.go  root_init.go  run.go  run_describe.go  run_list.go  test.go
cmd/same/: connect_to_nodepool.go  create_or_attach_disks.go  deploy_or_update_a_pipeline.go  deploy_or_update_kubeflow.go  main.go  root.go  run_an_experiment.go
docs/: HardProblems.md  Sprint001-2021-03-01-2021-04-16.md  setting-up-artifact-storage.md  setup-development-environment.md
docs/development/: create_a_vm_for_testing.md  how_to_generate_privatepublic_keypair.md  setup-development-environment.md  setup-same-development-env.md  simple_script_for_creating_a_vm_on_azure_SAMPLE.sh
experimental/: commandJob.yml  convert_kind_dual_stack.sh  imagePullSecretExperimenter.py  istio_external.yaml  local_golang.sh  pipelineJob.yml  sample.go  secret_pod.yaml  test.go  test_input_output.py
hack/: dlv-sudo.sh  test-results-to-a-file.sh  update-deps.sh
internal/box/: blob.go  box.go  generator.go
pkg/infra/: dependency_checker_interface.go  dependency_checker_live.go  dependency_checker_mock.go  (+3 more)
test/: create_test.go
test/testdata/multifile_notebook/: multifile-notebook.ipynb  multifile.ipynb  pyproject.toml  same.yaml
test/testdata/multifile_notebook/utils/: file_one.py  file_two.py  ner_model.py  read_input.py  sentiment_model.py  steep_model.py  summary_model.py  zip_files.py
(+110 files in other folders)
