[tool.poetry]
name = "same-cli"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.9.3"
pathlib2 = "^2.3.5"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
